<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ProgLab Arduino BT</string>
    <string name="status">Status</string>
    <string name="status_card_view_off">Bluetooth: OFF\nClick to activate bluetooth</string>
    <string name="status_card_view_error">Bluetooth: OFF\nError activating bluetooth. Try again?</string>
    <string name="status_card_view_on">Bluetooth: ON\nNot connected to a device</string>
    <string name="status_card_view_connected">Bluetooth: ON\nConnected to <xliff:g id="deviceName" example="HC-06">%s</xliff:g></string>
    <string name="status_card_view_disconnected">Bluetooth: OFF\nDisconnected!</string>
    <string name="status_card_view_not_available">Bluetooth: NOT AVAILABLE\nNO ADAPTER FOUND</string>

    <string name="bluetooth_show_devices">Find paired devices</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="status_card_view_cp">Connecting to <xliff:g id="deviceName" example="HC-06">%s</xliff:g>
        Click to rename device</string>
    <string name="led_on">Led on</string>
    <string name="led_off">Led off</string>
    <string name="light_on">Light on</string>
    <string name="light_off">Light off</string>

    <string name="disconnect">Disconnect</string>
    <string name="progress_dialog_connecting">Connecting to <xliff:g id="deviceName" example="HC-06">%s</xliff:g></string>
    <string name="progress_dialog_please_wait">Please wait.</string>
    <string name="alert_dialog_done">Execute</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_header_device">Enter new device name</string>
    <string name="alert_dialog_header_command">Enter new command</string>
    <string name="alert_dialog_message_command">Not case sensitive</string>
    <string name="send_command">Send new command</string>
    <string name="rename_device">Rename device</string>
    <string name="disconnected_from_device">Disconnected from device</string>
    <string name="error_bt_socket">Error. Cannot communicate with bluetooth socket</string>




</resources>
